# UI_python

./: README.md
QT6/: README.md  main.py  pyproject.toml
QT6/CODES/: real_time1.py  simple_ui1.py
mi_proyecto/: pyproject.toml
